env/staging/celery-sms-send-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms-send
  name:  celery-sms-send
  namespace: notification-canada-ca
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: celery-sms-send
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: celery-sms-send
    spec:
      nodeSelector: 
        karpenter.sh/provisioner-name: default    
      containers:
        - image: api
          imagePullPolicy: Always
          name: celery-sms-send
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/bash
                - -c
                - /app/scripts/run_celery_exit.sh
          command: ["/bin/sh"]
          args: ["-c", "sh /app/scripts/run_celery_send_sms.sh"]
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "550m"
              memory: "1024Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
status: {}
