env/staging/performance.yaml
####################################### RESOURCE REQUESTS #######################################
# PRIMARY CELERIES

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-primary
  name:  celery-primary
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-primary
        resources:
          requests:
            cpu: "150m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms-send-primary
  name:  celery-sms-send-primary
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-sms-send-primary
        resources:
          requests:
            cpu: "50m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-email-send-primary
  name:  celery-email-send-primary
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-email-send-primary
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
# SCALABLE CELERIES

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-scalable
  name:  celery-scalable
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-scalable
        resources:
          requests:
            cpu: "150m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms-send-scalable
  name:  celery-sms-send-scalable
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-sms-send-scalable
        resources:
          requests:
            cpu: "50m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-email-send-scalable
  name:  celery-email-send-scalable
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery-email-send-scalable
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
# OTHER APPS
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name:  api
  namespace: notification-canada-ca
spec:
  replicas: 4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
  name:  admin
  namespace: notification-canada-ca
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: documentation
  name:  documentation
  namespace: notification-canada-ca
spec:
  replicas: 2
