env/staging/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name:  api
  namespace: notification-canada-ca
spec:
  replicas: 4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
  name:  admin
  namespace: notification-canada-ca
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery
  name:  celery
  namespace: notification-canada-ca
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: celery
        resources:
          requests:
            cpu: "300m"
            memory: "500Mi"
          limits:
            cpu: "550m"
            memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: documentation
  name:  documentation
  namespace: notification-canada-ca
spec:
  replicas: 2
